--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "cyber-dashboard": {
+    "cyber-users-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cyber-dashboard",
+            "outputPath": "dist/cyber-users-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "cyber-dashboard:build:production"
+              "browserTarget": "cyber-users-app:build:production"
             },
             "development": {
-              "browserTarget": "cyber-dashboard:build:development"
+              "browserTarget": "cyber-users-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "cyber-dashboard:build"
+            "browserTarget": "cyber-users-app:build"
           }
         },
         "test": {
